# photoconsistency-visual-odometry

./: CMakeLists.txt  Doxyfile  PhotoconsistencyVisualOdometry.cpp  ProjectHome.md  README.txt  clean_generated_files.sh  config.h.in
apps/PhotoconsistencyFrameAlignment/: CMakeLists.txt
apps/PhotoconsistencyVisualOdometry/: CMakeLists.txt  PhotoconsistencyVisualOdometry.cpp
apps/PhotoconsistencyVisualOdometry/include/: CFrameRGBD.h  CRGBDGrabberOpenNI_PCL.h
apps/PhotoconsistencyVisualOdometry/src/: CRGBDGrabberOpenNI_PCL.cpp  PointCloudDownsampler.cpp
doc/: mainpage.h
doc/Compiling Instructions/: Compiling
doc/html/: _c_frame_r_g_b_d_8h_source.html  _c_photoconsistency_odometry_8h_source.html  _c_photoconsistency_odometry_analytic_8h_source.html  _c_photoconsistency_odometry_bi_objective_8h_source.html  _c_photoconsistency_odometry_ceres_8h_source.html  _c_r_g_b_d_grabber_8h_source.html  _c_r_g_b_d_grabber_open_n_i___open_c_v_8h_source.html  _c_r_g_b_d_grabber_open_n_i___p_c_l_8h_source.html  _c_r_g_b_d_grabber_rawlog_8h_source.html  _point_cloud_downsampler_8h_source.html  annotated.html  class_c_frame_r_g_b_d.html  class_c_r_g_b_d_grabber.html  class_c_r_g_b_d_grabber_open_n_i___open_c_v.html  class_c_r_g_b_d_grabber_open_n_i___p_c_l.html  class_c_r_g_b_d_grabber_rawlog.html  class_photoconsistency_odometry_1_1_c_photoconsistency_odometry.html  (+19 more)
include/: CPhotoconsistencyOdometry.h  CPhotoconsistencyOdometryCeres.h  PointCloudDownsampler.h
phovo/: CMakeLists.txt
phovo/include/: CPhotoconsistencyOdometryAnalytic.h  config.h
trunk/: CMakeLists.txt  Doxyfile  LICENSE.txt  PhotoconsistencyFrameAlignment.cpp  README.txt  clean_generated_files.sh
trunk/apps/: CMakeLists.txt
trunk/apps/PhotoconsistencyFrameAlignment/: CMakeLists.txt  PhotoconsistencyFrameAlignment.cpp
trunk/apps/PhotoconsistencyVisualOdometry/: CMakeLists.txt  PhotoconsistencyVisualOdometry.cpp
trunk/apps/PhotoconsistencyVisualOdometry/include/: CFrameRGBD.h  CRGBDGrabber.h  CRGBDGrabberOpenNI_OpenCV.h  CRGBDGrabberOpenNI_PCL.h  CRGBDGrabberRawlog.h  PointCloudDownsampler.h
trunk/apps/PhotoconsistencyVisualOdometry/src/: CRGBDGrabberOpenNI_OpenCV.cpp
trunk/doc/: mainpage.h
trunk/doc/Compiling Instructions/: Ceres_compile
trunk/doc/html/: _c_frame_r_g_b_d_8h_source.html  _c_photoconsistency_odometry_8h_source.html  _c_photoconsistency_odometry_analytic_8h_source.html  _c_photoconsistency_odometry_ceres_8h_source.html  _c_r_g_b_d_grabber_8h_source.html  _c_r_g_b_d_grabber_open_n_i___p_c_l_8h_source.html  _c_r_g_b_d_grabber_rawlog_8h_source.html  _point_cloud_downsampler_8h_source.html  annotated.html  class_c_frame_r_g_b_d.html  class_c_r_g_b_d_grabber.html  class_c_r_g_b_d_grabber_open_n_i___open_c_v.html  class_c_r_g_b_d_grabber_open_n_i___p_c_l.html  class_c_r_g_b_d_grabber_rawlog.html  class_photoconsistency_odometry_1_1_analytic_1_1_c_photoconsistency_odometry_analytic.html  class_photoconsistency_odometry_1_1_bi_objective_1_1_c_photoconsistency_odometry_bi_objective.html  class_photoconsistency_odometry_1_1_c_photoconsistency_odometry.html  class_photoconsistency_odometry_1_1_ceres_1_1_c_photoconsistency_odometry_ceres.html  class_photoconsistency_odometry_1_1_ceres_1_1_c_photoconsistency_odometry_ceres_1_1_residual_r_g_b_d_photoconsistency.html  class_photoconsistency_odometry_1_1_ceres_1_1_c_photoconsistency_odometry_ceres_1_1_visualization_callback.html  class_photoconsistency_odometry_ceres_1_1_c_photoconsistency_odometry_ceres.html  class_photoconsistency_odometry_ceres_1_1_c_photoconsistency_odometry_ceres_1_1_residual_r_g_b_d_photoconsistency.html  class_photoconsistency_odometry_ceres_1_1_c_photoconsistency_odometry_ceres_1_1_visualization_callback.html  class_point_cloud_downsampler.html  classes.html  config_8h_source.html  cvmat__serialization_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  mainpage_8h_source.html
trunk/doc/html/search/: all_62.html  all_63.html  all_64.html  all_67.html  all_69.html  all_72.html  all_73.html  all_76.html  classes_63.html  classes_76.html  functions_63.html  functions_67.html  functions_69.html  functions_73.html  variables_63.html  variables_64.html  variables_67.html  variables_69.html  variables_6c.html  variables_6d.html  variables_70.html
trunk/doc/images/: estimated_trajectory.eps  ground-truth_and_estimated_trajectory.eps
trunk/doc/latex/: annotated.tex  class_c_frame_r_g_b_d.tex  class_c_r_g_b_d_grabber.eps  class_c_r_g_b_d_grabber.tex  class_c_r_g_b_d_grabber_open_n_i___open_c_v.eps  class_c_r_g_b_d_grabber_open_n_i___open_c_v.tex  class_c_r_g_b_d_grabber_open_n_i___p_c_l.eps  class_c_r_g_b_d_grabber_rawlog.tex  class_photoconsistency_odometry_1_1_analytic_1_1_c_photoconsistency_odometry_analytic.tex  class_photoconsistency_odometry_1_1_bi_objective_1_1_c_photoconsistency_odometry_bi_objective.eps  class_photoconsistency_odometry_1_1_c_photoconsistency_odometry.eps  class_photoconsistency_odometry_1_1_c_photoconsistency_odometry.tex  class_photoconsistency_odometry_1_1_ceres_1_1_c_photoconsistency_odometry_ceres.eps  class_photoconsistency_odometry_1_1_ceres_1_1_c_photoconsistency_odometry_ceres.tex  class_photoconsistency_odometry_1_1_ceres_1_1_c_photoconsistency_odometry_ceres_1_1_residual_r_g_b_d_photoconsistency.tex  class_photoconsistency_odometry_1_1_ceres_1_1_c_photoconsistency_odometry_ceres_1_1_visualization_callback.tex  class_photoconsistency_odometry_ceres_1_1_c_photoconsistency_odometry_ceres.tex  class_photoconsistency_odometry_ceres_1_1_c_photoconsistency_odometry_ceres_1_1_visualization_callback.tex  doxygen.sty  hierarchy.tex  index.tex  refman.tex
trunk/include/: CFrameRGBD.h  CPhotoconsistencyOdometryCeres.h  CRGBDGrabber.h  cvmat_serialization.h  mainpage.h
trunk/phovo/: CMakeLists.txt
trunk/phovo/include/: CPhotoconsistencyOdometry.h  CPhotoconsistencyOdometryAnalytic.h  CPhotoconsistencyOdometryCeres.h  config.h
trunk/src/: CRGBDGrabberRawlog.cpp  PointCloudDownsampler.cpp
trunk/tools/plot_trajectory_tools/: plotErrorFunction.m
(+46 files in other folders)
