IF(BUILD_PHOTOCONSISTENCY_FRAME_ALIGNMENT_APPLICATION)
	ADD_SUBDIRECTORY(PhotoconsistencyFrameAlignment)
ENDIF(BUILD_PHOTOCONSISTENCY_FRAME_ALIGNMENT_APPLICATION)

IF(BUILD_PHOTOCONSISTENCY_VISUAL_ODOMETRY_APPLICATION)
	ADD_SUBDIRECTORY(PhotoconsistencyVisualOdometry)
ENDIF(BUILD_PHOTOCONSISTENCY_VISUAL_ODOMETRY_APPLICATION)

